# asclepius-code

./: README.md
Matlab/: GearCalc.mlx
asclepius/: CMakeLists.txt  package.xml
asclepius/config/: robot_controller.yaml  test
asclepius/description/: asclepius.urdf.xacro  asclepius.xacro  asclepius_gazebo.urdf.xacro  hardware_control.xacro  ros2_control_gazebo.xacro  threeDOF.urdf  util.xacro  world.sdf  wrist.xacro
asclepius/include/asclepius/: TrajectoryHelpers.hpp  TransformationHelpers.hpp
asclepius/launch/: display.launch.py  endeffector.launch.py  send_trajectory.launch.py  sim.launch.py  test.launch.py
asclepius/meshes/: base_link.STL  link1.STL  link2.STL  link4.STL  link5.STL  link6.STL  link7.STL
asclepius/rviz/: viewrobot.rviz
asclepius/scripts/: KinematicSol.py  TransformationHelp.py
asclepius/src/: KDLInverseKinematicsNode.cpp  KinematicChain.cpp  KinematicPublisher.cpp  send_trajectory.cpp
asclepius/urdf/: asclepius.urdf.xacro  asclepius.xacro  ros2_control_gazebo.xacro
dynamixel_arm/: CMakeLists.txt  package.xml
dynamixel_arm/config/: acps_controller.yaml
dynamixel_arm/launch/: display.launch.py  sim.launch.py
dynamixel_arm/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL
dynamixel_arm/nodes/: trajectory.cpp
dynamixel_arm/rviz/: viewrobot.rviz
dynamixel_arm/urdf/: acps_bot.ros2_control.xacro  acps_bot.ros2_control_gazebo.xacro  acps_bot.urdf.xacro  acps_bot.xacro
dynamixel_hardware/include/dynamixel_hardware/: dynamixel_hardware.hpp  visiblity_control.h
dynamixel_hardware/src/: dynamixel_hardware.cpp
endeffector_controller/: CMakeLists.txt  endeffector_controller.xml  package.xml
endeffector_controller/include/endeffector_controller/: endeffector_controller.hpp  visibility_control.h
endeffector_controller/src/: endeffector_controller.cpp
endeffector_hardware/: CMakeLists.txt  endeffector_hardware.xml  package.xml
endeffector_hardware/include/endeffector_hardware/: comms.hpp  endeffector_hardware.hpp  motor.hpp  visiblity_control.h
endeffector_hardware/src/: comms.cpp  endeffector_hardware.cpp  motor.cpp
uart_hardware_interface/: CMakeLists.txt  package.xml  uart_hardware_interface_plugin.xml
uart_hardware_interface/include/uart_hardware_interface/: uart_comm.hpp  uart_hardware_interface.hpp  visibility_control.h
uart_hardware_interface/src/: uart_comm.cpp  uart_hardware_interface.cpp
